fix (#2299): Align sponsors with content on desktop

--- a/themes/vue/source/css/_sidebar.styl
+++ b/themes/vue/source/css/_sidebar.styl
@@ -21,7 +21,7 @@
     margin-top: .5em
   .sidebar-inner
     width: 260px
-    padding: $content-padding-top + 40px 0px 60px 20px
+    padding: 2.2em 0px 60px 20px
   .version-select
     vertical-align: middle
     margin-left: 5px
